# market-state-detector

./: .env.example  ALPACA_QUICK_REFERENCE.md  IBKR_IMPLEMENTATION.md  IBKR_QUICK_REFERENCE.md  IBKR_SETUP_CHECKLIST.md  IMPLEMENTATION_SUMMARY.txt  LICENSE-GPL-3.0  MANIFEST.in  PHILOSOPHY.md  README.md  check_alpaca_connection.py  check_ibkr_connection.py  check_stock.py  pyproject.toml  requirements.txt
config/: default_config.yaml
docs/: ALPACA_INTEGRATION.md  IBKR_INTEGRATION.md
docs/dev/: IMPLEMENTATION_SUMMARY.md
docs/quick-reference/: ALPACA_QUICK_REFERENCE.md  IBKR_QUICK_REFERENCE.md
examples/: alpaca_usage.py  basic_usage.py  custom_config_usage.py  full_ohlc_usage.py  ibkr_usage.py  sample_data_stable.csv  sample_data_with_spike.csv
src/market_state_detector/: __init__.py  alpaca_data.py  cli.py  config.py  detector.py  gaps.py  ibkr_data.py  market_context.py  ranges.py  volatility.py
tests/: conftest.py  test_alpaca_data.py  test_config.py  test_detector.py  test_gaps.py  test_ibkr_data.py  test_import.py  test_market_context.py  test_ranges.py  test_volatility.py
