[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-state-detector"
version = "0.1.1"
description = "A tool to detect high-uncertainty market regimes using simple price behavior metrics"
readme = "README.md"
license = {text = "Apache-2.0 OR GPL-3.0-or-later"}
authors = [
    {name = "market-state-detector contributors"}
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/hoppefamily/market-state-detector"
Repository = "https://github.com/hoppefamily/market-state-detector"

[project.scripts]
market-state-detector = "market_state_detector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = [
    "LICENSE",
    "LICENSE-APACHE-2.0",
    "LICENSE-GPL-3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ibkr = [
    "ib_insync>=0.9.86",
]
alpaca = [
    "alpaca-py>=0.17.0",
]
